--- a/index.html
+++ b/index.html
@@ -1,64 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-   <!-- font awesome cdn link  -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
-   <!-- custom css file link  -->
-   <link rel="stylesheet" href="assets/css/style.css">
-
-   <!-- custom js file link  -->
-   <script src="assets/js/script.js" defer></script>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Personal Portfolio Website</title>
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+  <script src="https://kit.fontawesome.com/2b05088d83.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" type="image/png" href="assets/images/toto.jpeg">
 </head>
+
 <body>
-   
-<div class="container">
-
-   <h3 class="title"> Project Collection </h3>
-
-   <div class="products-container">
-
-      <div class="product" data-name="p-1">
-         <img src="assets/images/1.jpg" alt="">
-         <h3>Background Animation</h3>
-         <div class="price">01-06-2024</div>
+  <div id="header">
+    <div class="container">
+      <nav>
+        <p>Precious' Projects</p>
+        <img src="" class="logo">
+        <ul id="sidemenu">
+          <li><a href="#header">Home</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <i class="fas fa-times" onclick="closemenu()"></i>
+        </ul>
+        <i class="fas fa-bars" onclick="openmenu()"></i>
+      </nav>
+      <div class="header-text">
+        <p>Welcome to my</p>
+        <h1>Project Collection in AWD</h1>
       </div>
-
-      <div class="product" data-name="p-2">
-         <img src="assets/images/2.jpg" alt="">
-         <h3>Jumping Letters</h3>
-         <div class="price">xx-xx-xxxx</div>
+    </div>
+  </div>
+ 
+  <!-- ------------------------Projects------------------------------ -->
+  <div id="projects">
+    <div class="container">
+      <h1 class="sub-title">My Projects</h1>
+      <div class="project-list">
+        <!-- Existing projects -->
+        <div class="projects">
+          <img src="assets/images/1.png">
+          <div class="layer">
+            <h3>Background Animation</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="projects">
+          <img src="assets/images/2.png">
+          <div class="layer">
+            <h3>Jumping Letters</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="projects">
+          <img src="assets/images/3.png">
+          <div class="layer">
+            <h3>Bell Notification</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="projects">
+          <img src="assets/images/4.png">
+          <div class="layer">
+            <h3>Animation Project</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="projects">
+          <img src="assets/images/5.png">
+          <div class="layer">
+            <h3>Technical 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="projects">
+          <img src="assets/images/6.png">
+          <div class="layer">
+            <h3>Technical 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="projects">
+          <img src="assets/images/7.png">
+          <div class="layer">
+            <h3>Technical 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="projects">
+          <img src="assets/images/8.png">
+          <div class="layer">
+            <h3>Technical 4</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
       </div>
-
-      <div class="product" data-name="p-3">
-         <img src="assets/images/3.jpg" alt="">
-         <h3>Bell Notification</h3>
-         <div class="price">xx-xx-xxxx</div>
+    </div>
+  </div>  
+  
+  <!-- -----------------------------contact------------------------- -->
+  <div id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="contact-left">
+          <h1 class="sub-title">Contact Me</h1>
+          <p><i class="fa-solid fa-paper-plane"></i> cpreciouscarbonell@gmail.com</p>
+          <div class="social-icons">
+            <a href="https://www.facebook.com/precious.carbonell"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/aenjils"><i class="fa-brands fa-twitter-square"></i></a>
+            <a href="https://www.instagram.com/aenjils"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/precious-angeline-carbonell-219015298/"><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="contact-right">
+          <form>
+            <input type="text" name="Name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+            <button type="submit" class="btn btn2">Submit</button>
+          </form>
+        </div>
       </div>
+    </div>
+  </div>
 
-      <div class="product" data-name="p-4">
-         <img src="assets/images/4.jpg" alt="">
-         <h3>Scroll Indicator</h3>
-         <div class="price">xx-xx-xxxx</div>
-      </div>
+  <script>
 
-      <div class="product" data-name="p-5">
-         <img src="assets/images/5.jpg" alt="">
-         <h3>Animation Project</h3>
-         <div class="price">xx-xx-xxxx</div>
-      </div>
+    var tablinks = document.getElementsByClassName('tab-links');
+    var tabcontents = document.getElementsByClassName('tab-contents');
 
-      <div class="product" data-name="p-6">
-         <img src="assets/images/6.jpg" alt="">
-         <h3>Calculator</h3>
-         <div class="price">xx-xx-xxxx</div>
-      </div>
+    function opentab(tabname) {
+      for (tablink of tablinks) {
+        tablink.classList.remove("active-link");
+      }
+      for (tabcontent of tabcontents) {
+        tabcontent.classList.remove("active-tab");
+      }
+      event.currentTarget.classList.add("active-link");
+      document.getElementById(tabname).classList.add("active-tab");
+    }
 
-   </div>
+    var sidemenu = document.getElementById("sidemenu");
 
-</div>
+    function openmenu() {
+      sidemenu.style.right = "0";
+    }
+    function closemenu() {
+      sidemenu.style.right = "-200px";
+    }
+  </script>
+  <script src="assets/js/script.js"></script>
+</body>
+
+</html>
