--- a/index.html
+++ b/index.html
@@ -41,64 +41,65 @@
           <img src="assets/images/1.png">
           <div class="layer">
             <h3>Background Animation</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>Simple background animation when hovered, reveals an image underneath.</p>
+            <a href="https://github.com/Precious-Carbonell/BG-ANIMATION" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
           <img src="assets/images/2.png">
           <div class="layer">
             <h3>Jumping Letters</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>Dynamic image of Mario that jumps or bounces on the screen when clicked.</p>
+            <a href="https://github.com/Precious-Carbonell/JUMPING-LETTERS" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
           <img src="assets/images/3.png">
           <div class="layer">
             <h3>Bell Notification</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>Church bell notification, that wil display a surprise video when clicked 12 times.</p>
+            <a href="https://github.com/Precious-Carbonell/BELL-NOTIFICATION" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
           <img src="assets/images/4.png">
           <div class="layer">
-            <h3>Animation Project</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>Resume</h3>
+            <p>Resume of the user containing important details about her.</p>
+            <a href="https://github.com/Precious-Carbonell/Resume" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
           <img src="assets/images/5.png">
           <div class="layer">
-            <h3>Technical 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>Color Switch</h3>
+            <p>A website that has a color switch button.</p>
+            <a href="https://github.com/Precious-Carbonell/COLOR-SWITCH" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+
           </div>
         </div>
         <div class="projects">
           <img src="assets/images/6.png">
           <div class="layer">
-            <h3>Technical 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>Calculator</h3>
+            <p>A simple calculator program.</p>
+            <a href="https://github.com/Precious-Carbonell/CALCULATOR" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
           <img src="assets/images/7.png">
           <div class="layer">
-            <h3>Technical 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>TProduct Card/h3>
+            <p>A Sanrio themed shop that displays the product card of the items for sale</p>
+            <a href="https://github.com/Precious-Carbonell/AWD-S4-Technical" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
           <img src="assets/images/8.png">
           <div class="layer">
-            <h3>Technical 4</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>Bootstrap/h3>
+            <p>A duck plushie shop that utilizes bootstrap and fun animations, modeled from the AirPods website of Apple.</p>
+            <a href="https://github.com/Precious-Carbonell/AWD-MachineProblem5" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
       </div>
