--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="projects">
           <img src="assets/images/7.png">
           <div class="layer">
-            <h3>TProduct Card/h3>
+            <h3>Product Card</h3>
             <p>A Sanrio themed shop that displays the product card of the items for sale</p>
             <a href="https://github.com/Precious-Carbonell/AWD-S4-Technical" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
@@ -97,7 +97,7 @@
         <div class="projects">
           <img src="assets/images/8.png">
           <div class="layer">
-            <h3>Bootstrap/h3>
+            <h3>Bootstrap</h3>
             <p>A duck plushie shop that utilizes bootstrap and fun animations, modeled from the AirPods website of Apple.</p>
             <a href="https://github.com/Precious-Carbonell/AWD-MachineProblem5" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
