--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="projects">
           <img src="assets/images/1.png">
           <div class="layer">
-            <h3>Background Animation</h3>
-            <p>Simple background animation when hovered, reveals an image underneath.</p>
-            <a href="https://github.com/Precious-Carbonell/BG-ANIMATION" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>Animation Project</h3>
+            <p> Your Pokémon encyclopedia online; click Ash for inspiring quotes!</p>
+            <a href="https://precious-carbonell.github.io/AWD-Animation-Project/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
@@ -50,7 +50,7 @@
           <div class="layer">
             <h3>Jumping Letters</h3>
             <p>Dynamic image of Mario that jumps or bounces on the screen when clicked.</p>
-            <a href="https://github.com/Precious-Carbonell/JUMPING-LETTERS" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://precious-carbonell.github.io/JUMPING-LETTERS/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
@@ -58,7 +58,7 @@
           <div class="layer">
             <h3>Bell Notification</h3>
             <p>Church bell notification, that wil display a surprise video when clicked 12 times.</p>
-            <a href="https://github.com/Precious-Carbonell/BELL-NOTIFICATION" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://precious-carbonell.github.io/BELL-NOTIFICATION/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
@@ -66,7 +66,7 @@
           <div class="layer">
             <h3>Resume</h3>
             <p>Resume of the user containing important details about her.</p>
-            <a href="https://github.com/Precious-Carbonell/Resume" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://precious-carbonell.github.io/Resume/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
@@ -74,7 +74,7 @@
           <div class="layer">
             <h3>Color Switch</h3>
             <p>A website that has a color switch button.</p>
-            <a href="https://github.com/Precious-Carbonell/COLOR-SWITCH" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://precious-carbonell.github.io/COLOR-SWITCH/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
           </div>
         </div>
@@ -83,7 +83,7 @@
           <div class="layer">
             <h3>Calculator</h3>
             <p>A simple calculator program.</p>
-            <a href="https://github.com/Precious-Carbonell/CALCULATOR" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://precious-carbonell.github.io/CALCULATOR/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
@@ -91,7 +91,7 @@
           <div class="layer">
             <h3>Product Card</h3>
             <p>A Sanrio themed shop that displays the product card of the items for sale</p>
-            <a href="https://github.com/Precious-Carbonell/AWD-S4-Technical" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://precious-carbonell.github.io/AWD-S4-Technical/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
@@ -99,7 +99,7 @@
           <div class="layer">
             <h3>Bootstrap</h3>
             <p>A duck plushie shop that utilizes bootstrap and fun animations, modeled from the AirPods website of Apple.</p>
-            <a href="https://github.com/Precious-Carbonell/AWD-MachineProblem5" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://precious-carbonell.github.io/AWD-MachineProblem5/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
       </div>
