--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="projects">
           <img src="assets/images/1.png">
           <div class="layer">
-            <h3>Animation Project</h3>
-            <p> Your Pokémon encyclopedia online; click Ash for inspiring quotes!</p>
-            <a href="https://precious-carbonell.github.io/AWD-Animation-Project/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>Login-Signup</h3>
+            <p> A simple login, and sign up page.</p>
+            <a href="https://precious-carbonell.github.io/login-signup/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="projects">
